# pokemon-stats-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
research/: pokeapi_research.ipynb
src/pipeline/: orchestrate.py
src/pipeline/extract/: __init__.py  el.py
src/pipeline/extract/pokeapi/: __init__.py  base.py  client.py  registry.py
src/pipeline/transform/dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
src/pipeline/transform/dbt/models/: exposures.yml
src/pipeline/transform/dbt/models/curated/: __schema.yml  location_pokemon_encounters.sql  pokemon_defense_profile.sql  pokemon_evolutions.sql  pokemon_game_stats_and_moves.sql  pokemon_moves.sql  pokemon_type_weaknesses.sql
src/pipeline/transform/dbt/models/raw/pokeapi/: __schema.yml  __sources.yml  location.sql  location_area__encounter_methods_rate.sql  location_area__pokemon_encounters_rates.sql  move_learn_methods.sql  pokedex.sql  pokedex__pokemon_species.sql  pokemon.sql  pokemon__move.sql  pokemon__stats.sql  pokemon__type.sql  pokemon_species.sql  pokemon_species__evolutions_chain.sql  pokemon_species__pokemon.sql  region.sql  type.sql  version_groups.sql  version_groups__move_learn_methods.sql  version_groups__pokedex.sql  version_groups__region.sql  versions.sql
src/pokemon_stats_dbt/: dbt_project.yml
src/pokemon_stats_mcp/: __init__.py  server.py
src/pokemon_stats_mcp/database/: __init__.py  base.py  chroma_adapter.py  db_base.py  db_duckdb.py  db_factory.py  duckdb_adapter.py  dummy_vector_adapter.py  vector_adapter.py
src/pokemon_stats_mcp/helpers/: pokeapi_data_extractor.py
